--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg  navbar-dark .navbar-fixed-top navbar-custom" >
         <div class="container-fluid navcontainer">
-          <a class="navbar-brand" href="#">Navbar
+          <a class="navbar-brand" href="#">Restaurants
         
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
