--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <div class="lft">
   <h1>About us</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio ratione rem similique animi hic, 
-    quos in eos? Tenetur nulla inventore corrupti soluta, dolorem error tempora provident eum sequi quod.</p>
+     Tenetur nulla inventore corrupti soluta, dolorem error tempora provident eum sequi quod.</p>
 </div>
 <div class="right">
   <img src="./images/about_img.png" alt="">
