--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"> 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script></head>
   <link rel="stylesheet" href="style.css">
+  <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
+  <link rel="stylesheet" href="">
 <body>    
 	<nav class="navbar navbar-expand-sm navbar-custom  navbar-dark bg-success fixed-top">
 	  <div class="container-fluid ">
@@ -18,19 +21,19 @@
 		<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 		  <ul class="navbar-nav ">
 			<li class="nav-item">
-			  <a class="nav-link active" aria-current="page" href="#">Home</a>
+			  <a class="nav-link active" aria-current="page" href="#home">Home</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="#">About us</a>
+			  <a class="nav-link" href="#about">About us</a>
 			</li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Menu</a>
+                <a class="nav-link" href="#menu">Menu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#feature">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact us</a>
+                <a class="nav-link" href="#contact">Contact us</a>
               </li>		
 		  </ul>		  
 		</div>
@@ -64,5 +67,266 @@
 </div>
 </section>
  <!-- End of about us section -->
+
+ <section class="menu" id="menu">
+  <h1 class="center">Our Menu</h1>
+  <div class="row padding">
+		<div class="col-sm-12 col-md-4 mb-4">
+			<div class="card shadow p-3 mb-5 bg-body rounded h-100" data-aos="flip-left">
+				<img src="./images/about_img.png" class="card-img-top" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Food Description</h5>
+					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae explicabo deleniti nemo illo.
+						Incidunt a magni quaerat facilis, ab mollitia laboriosam enim numquam impedit 
+						eos quos voluptatum at officia?</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-12 col-md-4 mb-4">
+			<div class="card p-3 shadow mb-5 bg-body rounded h-100" data-aos="flip-right">
+				<img src='./images/about_img.png' class="card-img-top" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Food Description </h5>
+					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae explicabo deleniti nemo illo.
+						Incidunt a magni quaerat facilis, ab mollitia laboriosam enim numquam impedit 
+						eos quos voluptatum at officia?</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-12 col-md-4 mb-4">
+			<div class="card shadow p-3 mb-5 bg-body rounded h-100" data-aos="flip-left">
+				<img src="./images/about_img.png" class="card-img-top" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Food Description</h5>
+					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae explicabo deleniti nemo illo.
+						Incidunt a magni quaerat facilis, ab mollitia laboriosam enim numquam impedit 
+						eos quos voluptatum at officia? </p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-12 col-md-4 mb-4">
+			<div class="card shadow p-3 mb-5 bg-body rounded h-100" data-aos="flip-left">
+				<img src="./images/about_img.png" class="card-img-top" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Food Description</h5>
+					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae explicabo deleniti nemo illo.
+						Incidunt a magni quaerat facilis, ab mollitia laboriosam enim numquam impedit 
+						eos quos voluptatum at officia?</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-12 col-md-4 mb-4">
+			<div class="card p-3 shadow mb-5 bg-body rounded h-100" data-aos="flip-right">
+				<img src='./images/about_img.png' class="card-img-top" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Food Description </h5>
+					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae explicabo deleniti nemo illo.
+						Incidunt a magni quaerat facilis, ab mollitia laboriosam enim numquam impedit 
+						eos quos voluptatum at officia?</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-12 col-md-4 mb-4">
+			<div class="card shadow p-3 mb-5 bg-body rounded h-100" data-aos="flip-left">
+				<img src="./images/about_img.png" class="card-img-top" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Food Description</h5>
+					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae explicabo deleniti nemo illo.
+						 Incidunt a magni quaerat facilis, ab mollitia laboriosam enim numquam impedit 
+						 eos quos voluptatum at officia?</p>
+				</div>
+			</div>
+		</div>
+	</div>
+ </section>
+
+ <section class="feature" id="feature">
+	  <!-- Feature Start -->
+	  <div class="feature">
+		  <h1>Our Features</h1>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-5">
+					<div class="section-header">
+						<p>Why Choose Us</p>
+						<h2>Our Key Features</h2>
+					</div>
+					<div class="feature-text">
+						<div class="feature-img">
+							<div class="row">
+								<div class="col-6">
+									<img src="./images/about_img.png" alt="Image">
+								</div>
+								<div class="col-6">
+									<img src="./images/about_img.png" alt="Image">
+								</div>
+								<div class="col-6">
+									<img src="./images/about_img.png" alt="Image">
+								</div>
+								<div class="col-6">
+									<img src="./images/about_img.png" alt="Image">
+								</div>
+							</div>
+						</div>
+						<p>
+							Lorem ipsum dolor sit amet consec adipis elit. Phasel nec preti mi. Curabit facilis ornare velit non vulputa. Aliquam metus tortor, auctor id gravida condime, viverra quis sem. Curabit non nisl nec nisi sceleri maximus 
+						</p>
+						<!-- <a class="btn custom-btn" href="">Book A Table</a> -->
+					</div>
+				</div>
+				<div class="col-lg-7">
+					<div class="row">
+						<div class="col-sm-6">
+							<div class="feature-item">
+								<i class="flaticon-cooking"></i>
+								<h3>World’s best Chef</h3>
+								<p>
+									Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit non vulput metus tortor
+								</p>
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div class="feature-item">
+								<i class="flaticon-vegetable"></i>
+								<h3>Natural ingredients</h3>
+								<p>
+									Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit non vulput metus tortor
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-6">
+							<div class="feature-item">
+								<i class="flaticon-medal"></i>
+								<h3>Best quality products</h3>
+								<p>
+									Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit non vulput metus tortor
+								</p>
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div class="feature-item">
+								<i class="flaticon-meat"></i>
+								<h3>Fresh vegetables & Meet</h3>
+								<p>
+									Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit non vulput metus tortor
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-6">
+							<div class="feature-item">
+								<i class="flaticon-courier"></i>
+								<h3>Fastest door delivery</h3>
+								<p>
+									Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit non vulput metus tortor
+								</p>
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div class="feature-item">
+								<i class="flaticon-fruits-and-vegetables"></i>
+								<h3>Ground beef & Low fat</h3>
+								<p>
+									Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit non vulput metus tortor
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Feature End -->
+ </section>
+  <!-- Contact Form section start-->
+  <section class="" id="contact">
+    <div class="section-header">
+        <h1 class="header-title">Contact Us</h1>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-6">
+                <div class="mb-5">
+                    <div class="row">
+                        <div class="col">
+                            <div class="form-group">
+                                <input type="email" name="email_from" id="email_from" placeholder="Email"
+                                    class="form-control" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col">
+                            <div class="form-group">
+                                <textarea name="contact_message" id="contact_message" cols="30" rows="10"
+                                    class="form-control" placeholder="Type a message..."></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col">
+                            <div class="form-group">
+                                <button onclick="send_email()" class="btn common-bg-color">
+                                    Send
+                                </button>
+                                <span id="response_status"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-6">
+                <div data-aos="fade-down" data-aos-offset="200" data-aos-easing="ease-in-sine" class="p-4">
+                    <table class="table mb-5 w-75">
+                        <tr>
+                            <td><em class="fa fa-map-marker fa-lg"></em></td>
+                            <td id="address"></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Street</strong></td>
+                            <td id="street"></td>
+                        </tr>
+                        <tr>
+                            <td><em class="fa fa-envelope"></em></td>
+                            <td id="email"></td>
+                        </tr>
+                        <tr>
+                            <td><em class="fa fa-phone"></em></td>
+                            <td id="phone"></td>
+                        </tr>
+                    </table>
+                    <span class="badge common-bg-color icons-container"><a id="facebook" target="_blank"
+                        class="fa fa-facebook font-awesome-underline social-icons"></a></span>
+                    <span class="badge common-bg-color icons-container"><a id="twitter" target="_blank"
+                            class="fa fa-twitter font-awesome-underline social-icons"></a></span>
+                    <span class="badge common-bg-color icons-container"><a id="instagram" target="_blank"
+                            class="fa fa-instagram font-awesome-underline social-icons"></a></span>
+                            <span class="badge common-bg-color icons-container"><a id="linkedin" target="_blank"
+                                class="fa fa-linkedin font-awesome-underline social-icons"></a></span>
+                    <span class="badge common-bg-color icons-container"><a id="youtube" target="_blank"
+                            class="fa fa-youtube font-awesome-underline social-icons"></a></span>
+                     <span class="badge common-bg-color icons-container"><a id="github" target="_blank"
+                            class="fa fa-github font-awesome-underline social-icons"></a></span>
+                            <span class="badge common-bg-color icons-container"><a id="whatsapp" target="_blank"
+                                class="fa fa-whatsapp font-awesome-underline social-icons"></a></span>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+</section>
+
+<!-- contact form section ends -->
+
+<!-- footer section ends -->
+<section class="footer" id="footer">
+<div class="common-bg-color text-center p-4">
+    <span class="text-white"><div id="copyright"></div></span>
+</div>
+</section>
+<script src="./js/script.js"></script>
 </body>
 </html>
