--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script></head>
   <link rel="stylesheet" href="style.css">
   <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
-  <link rel="stylesheet" href="">
+  
 <body>    
 	<nav class="navbar navbar-expand-sm navbar-custom  navbar-dark bg-success fixed-top">
 	  <div class="container-fluid ">
-		<a class="navbar-brand " href="#">Bar-Restaurants</a>
+		<a class="navbar-brand " href="#home">Bar-Restaurants</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -39,7 +39,7 @@
 		</div>
 	  </div>
 	</nav>
-    <section class="home" id="#home">
+    <section class="home" id="home">
         
         <div class="hmimage">
           <img src="./images/home.jpg" alt="">
