fix the webview issues

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, laboriosam quis 
             ius cupiditate vero magni odio nisi. Numquam incidunt eveniet tenetur error voluptatum, 
             mollitia possimus nobis accusamus animi. Accusantium, voluptatibus.</h3>
-          <button>View Menu</button>
+          <button class="btn">View Menu</button>
         </div>                                                                                                                                                                 
 
       </section>
@@ -57,8 +57,9 @@
 
  <!-- Start of about us section -->
 <section class="about" id="about">
-<div class="lft">
-  <h1>About us</h1>
+	<h1 class="centered">About us</h1>
+<div class="left">
+  
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio ratione rem similique animi hic, 
      Tenetur nulla inventore corrupti soluta, dolorem error tempora provident eum sequi quod.</p>
 </div>
@@ -69,7 +70,7 @@
  <!-- End of about us section -->
 
  <section class="menu" id="menu">
-  <h1 class="center">Our Menu</h1>
+  <h1 class="centered">Our Menu</h1>
   <div class="row padding">
 		<div class="col-sm-12 col-md-4 mb-4">
 			<div class="card shadow p-3 mb-5 bg-body rounded h-100" data-aos="flip-left">
@@ -143,7 +144,7 @@
  <section class="feature" id="feature">
 	  <!-- Feature Start -->
 	  <div class="feature">
-		  <h1>Our Features</h1>
+		  <h1 class="centered">Our Features</h1>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-5">
@@ -244,7 +245,7 @@
   <!-- Contact Form section start-->
   <section class="" id="contact">
     <div class="section-header">
-        <h1 class="header-title">Contact Us</h1>
+        <h1 class="centered header-title">Contact Us</h1>
     </div>
     <div class="container">
         <div class="row">
