--- a/index.html
+++ b/index.html
@@ -62,16 +62,25 @@
   
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio ratione rem similique animi hic, 
      Tenetur nulla inventore corrupti soluta, dolorem error tempora provident eum sequi quod.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio ratione rem similique animi hic, 
+		Tenetur nulla inventore corrupti soluta, dolorem error tempora provident eum sequi quod.</p>
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio ratione rem similique animi hic, 
+			Tenetur nulla inventore corrupti soluta, dolorem error tempora provident eum sequi quod.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio ratione rem similique animi hic, 
+				Tenetur nulla inventore corrupti soluta, dolorem error tempora provident eum sequi quod.</p>
 </div>
 <div class="right">
   <img src="./images/about_img.png" alt="">
 </div>
+<br style="clear:both;"/>
 </section>
  <!-- End of about us section -->
 
  <section class="menu" id="menu">
-  <h1 class="centered">Our Menu</h1>
+ 
   <div class="row padding">
+	<h1 class="centered">Our Menu</h1>
 		<div class="col-sm-12 col-md-4 mb-4">
 			<div class="card shadow p-3 mb-5 bg-body rounded h-100" data-aos="flip-left">
 				<img src="./images/about_img.png" class="card-img-top" alt="...">
