design mobile view

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<h1 class="centered">Our Menu</h1>
 		<div class="col-sm-12 col-md-4 mb-4">
 			<div class="card shadow p-3 mb-5 bg-body rounded h-100" data-aos="flip-left">
-				<img src="./images/about_img.png" class="card-img-top" alt="...">
+				<img src="./images/about_img.png" class="card-img-top imgmenu" alt="...">
 				<div class="card-body">
 					<h5 class="card-title">Food Description</h5>
 					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae explicabo deleniti nemo illo.
@@ -94,7 +94,7 @@
 		</div>
 		<div class="col-sm-12 col-md-4 mb-4">
 			<div class="card p-3 shadow mb-5 bg-body rounded h-100" data-aos="flip-right">
-				<img src='./images/about_img.png' class="card-img-top" alt="...">
+				<img src='./images/about_img.png' class="card-img-top imgmenu" alt="...">
 				<div class="card-body">
 					<h5 class="card-title">Food Description </h5>
 					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae explicabo deleniti nemo illo.
@@ -105,7 +105,7 @@
 		</div>
 		<div class="col-sm-12 col-md-4 mb-4">
 			<div class="card shadow p-3 mb-5 bg-body rounded h-100" data-aos="flip-left">
-				<img src="./images/about_img.png" class="card-img-top" alt="...">
+				<img src="./images/about_img.png" class="card-img-top imgmenu" alt="...">
 				<div class="card-body">
 					<h5 class="card-title">Food Description</h5>
 					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae explicabo deleniti nemo illo.
@@ -116,7 +116,7 @@
 		</div>
 		<div class="col-sm-12 col-md-4 mb-4">
 			<div class="card shadow p-3 mb-5 bg-body rounded h-100" data-aos="flip-left">
-				<img src="./images/about_img.png" class="card-img-top" alt="...">
+				<img src="./images/about_img.png" class="card-img-top imgmenu" alt="...">
 				<div class="card-body">
 					<h5 class="card-title">Food Description</h5>
 					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae explicabo deleniti nemo illo.
@@ -127,7 +127,7 @@
 		</div>
 		<div class="col-sm-12 col-md-4 mb-4">
 			<div class="card p-3 shadow mb-5 bg-body rounded h-100" data-aos="flip-right">
-				<img src='./images/about_img.png' class="card-img-top" alt="...">
+				<img src='./images/about_img.png' class="card-img-top imgmenu" alt="...">
 				<div class="card-body">
 					<h5 class="card-title">Food Description </h5>
 					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae explicabo deleniti nemo illo.
@@ -138,7 +138,7 @@
 		</div>
 		<div class="col-sm-12 col-md-4 mb-4">
 			<div class="card shadow p-3 mb-5 bg-body rounded h-100" data-aos="flip-left">
-				<img src="./images/about_img.png" class="card-img-top" alt="...">
+				<img src="./images/about_img.png" class="card-img-top imgmenu" alt="...">
 				<div class="card-body">
 					<h5 class="card-title">Food Description</h5>
 					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae explicabo deleniti nemo illo.
