--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 		</div>
 	  </div>
 	</nav>
+	<!-- <h2>Typical Breakpoints</h2>
+     <p class="example">Resize the browser window to see how the background color of this paragraph changes on different screen sizes.</p> -->
     <section class="home" id="home">
         
         <div class="hmimage">
@@ -49,8 +51,10 @@
           <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, laboriosam quis 
             ius cupiditate vero magni odio nisi. Numquam incidunt eveniet tenetur error voluptatum, 
             mollitia possimus nobis accusamus animi. Accusantium, voluptatibus.</h3>
-          <button class="btn">View Menu</button>
-        </div>                                                                                                                                                                 
+
+			<button class="btn">View Menu</button>
+        </div>      
+		                                                                                                                                                           
 
       </section>
       <!-- End of Home section -->
