fixing mobileview of homepage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" href="style.css">
   <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
   
-<body>    
+<body> 
+	<div class="example">hey i am an example</div>   
 	<nav class="navbar navbar-expand-sm navbar-custom  navbar-dark bg-success fixed-top">
 	  <div class="container-fluid ">
 		<a class="navbar-brand " href="#home">Bar-Restaurants</a>
@@ -62,12 +63,12 @@
   
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio ratione rem similique animi hic, 
      Tenetur nulla inventore corrupti soluta, dolorem error tempora provident eum sequi quod.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio ratione rem similique animi hic, 
+  <p class="test1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio ratione rem similique animi hic, 
 		Tenetur nulla inventore corrupti soluta, dolorem error tempora provident eum sequi quod.</p>
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio ratione rem similique animi hic, 
 			Tenetur nulla inventore corrupti soluta, dolorem error tempora provident eum sequi quod.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio ratione rem similique animi hic, 
+  <p class="test1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio ratione rem similique animi hic, 
 				Tenetur nulla inventore corrupti soluta, dolorem error tempora provident eum sequi quod.</p>
 </div>
 <div class="right">
